--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,7 +22,7 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    namespace fr.g123k.flutterappbadge.flutterappbadger
+    namespace "fr.g123k.flutterappbadge.flutterappbadger"
     
     compileSdkVersion 29
 
